# bambu-cli

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml
docker/: Dockerfile
src/: cli.py
src/actions/: print.py
src/bambucli/: basetypes.py  cli.py  dashboard.py  printdialogue.py  printerview.py
src/bambucli/actions/: add.py  addlocal.py  gettasks.py  info.py  monitor.py  print.py  upload.py
src/bambucli/bambu/: ftpclient.py  gcodestate.py  httpapi.py  httpclient.py  mqttclient.py  printer.py  speedprofiles.py  ssdpclient.py  task.py
src/bambucli/bambu/messages/: getversion.py  onpushstatus.py
src/bambucli/ultimaker/: discoveryclient.py  httpclient.py  printer.py  system_info.py
